--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "nag"
+name = "tjat"
 version = "0.1.0"
 edition = "2024"
 license = "Apache-2.0"
 description = "productivity, in your terminal."
 authors = ["yinka olotin olayinka@kubeaid.io"]
-repository = "https://github.com/yinkaolotin/nag"
+repository = "https://github.com/yinkaolotin/tjat"
 
 [dependencies]
