chore: add dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ authors = ["yinka olotin olayinka@kubeaid.io"]
 repository = "https://github.com/yinkaolotin/tjat"
 
 [dependencies]
+color-eyre = "0.6.3"
+crossterm = "0.28.1"
+ratatui = "0.29.0"
