--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "nag"
+name = "awfa"
 version = "0.1.0"
 edition = "2024"
-license = "Apache 2.0"
+license = "Apache-2.0"
 description = "productivity, in your terminal."
 authors = ["yinka olotin olayinka@kubeaid.io"]
+repository = "https://github.com/yinkaolotin/tjat"
 
 [dependencies]
